--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "myaias",
-  "version": "1.4.3",
+  "version": "1.5.0",
   "description": "A Vue 3 AI personal assistant component",
   "main": "./dist/myaias.umd.cjs",
   "license": "MIT",
   "module": "./dist/myaias.js",
   "types": "./dist/index.d.ts",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/xunita/MyAIAS-Vue-3.git"
+  },
   "type": "module",
   "exports": {
     ".": {
